[RBL-4] evosuite chay OK tren JDK 11: them EVOSUITE_JAVA, tang timeout 30s->180s (30s kill oan moi run) - loc